--- a/src/components/RuleBook/RuleBook.scss
+++ b/src/components/RuleBook/RuleBook.scss
@@ -41,12 +41,14 @@
   overflow: hidden;
 }
 .right > figure.front {
-  background-position: right;
+  background-position: center;
+  background-size: cover;
   border-radius: 0 10px 10px 0;
   box-shadow: 2px 2px 15px -2px rgba(0, 0, 0, 0.2);
 }
 .right > figure.back {
-  background-position: left;
+  background-position: center;
+  background-size: cover;
   border-radius: 10px 0 0 10px;
   box-shadow: -2px 2px 15px -2px rgba(0, 0, 0, 0.2);
   transform: rotateY(180deg);
