--- a/src/components/Questions/Questions.scss
+++ b/src/components/Questions/Questions.scss
@@ -55,9 +55,13 @@
       flex-direction: column;
       justify-content: center;
       align-items: center;
-      & SimpleImg {
-        height: inherit;
-        width: inherit;
+      & .question-img  {
+        height: 450px;
+        width: 680px;
+        background-repeat: no-repeat;
+        background-size: contain;
+        background-position: center;
+        margin-bottom: 10px;
       }
       & input {
         letter-spacing: 0.1rem;
@@ -87,6 +91,24 @@
     }
   }
 }
+
+.spotlight::before {
+  content: '';
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  pointer-events: none;
+  animation: fadein 2s 1s 1 both;
+  background: radial-gradient(
+    circle 10vmax at var(--cursorX) var(--cursorY),
+    rgba(0, 0, 0, 0) 0%,
+    rgba(0, 0, 0, 0.5) 80%,
+    rgba(0, 0, 0, 0.95) 100%
+  );
+}
+
 
 @keyframes shake {
   from {
